Prevent menus from being hidden by the tall media patch e15d7a

--- a/src/app/styles/components/media/_media-detail.scss
+++ b/src/app/styles/components/media/_media-detail.scss
@@ -10,8 +10,6 @@
   border-radius: 2px;
   margin-bottom: 24px;
   background-color: $white;
-  max-height: 2000px;
-  overflow-y: hidden;
 }
 
 // Row with the status and actions menu button
